--- a/components/org.wso2.carbon.identity.application.authenticator.requestpath.oauth/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.requestpath.oauth/pom.xml
@@ -59,6 +59,7 @@
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.oauth</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
