--- a/features/org.wso2.carbon.identity.application.authenticator.requestpath.oauth.server.feature/pom.xml
+++ b/features/org.wso2.carbon.identity.application.authenticator.requestpath.oauth.server.feature/pom.xml
@@ -69,7 +69,7 @@
                             <importFeatures>
                                 <importFeatureDef>org.wso2.carbon.core:compatible:${carbon.kernel.version}</importFeatureDef>
                                 <importFeatureDef>org.wso2.carbon.identity.application.authentication.framework.server:compatible:${identity.framework.version}</importFeatureDef>
-                                <importFeatureDef>org.wso2.carbon.identity.oauth.server:compatible:${carbon.identity.version}</importFeatureDef>
+                                <importFeatureDef>org.wso2.carbon.identity.oauth.server:compatible:${identity.inbound.auth.oauth.version}</importFeatureDef>
                             </importFeatures>
                         </configuration>
                     </execution>
