--- a/components/org.wso2.carbon.identity.application.authenticator.requestpath.oauth/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.requestpath.oauth/pom.xml
@@ -92,6 +92,8 @@
 
                             org.wso2.carbon.identity.application.authentication.framework.*;
                             version="${carbon.identity.package.import.version.range}",
+                            org.wso2.carbon.identity.application.common.*;
+                            version="${carbon.identity.package.import.version.range}",
                             org.wso2.carbon.identity.oauth2;
                             version="${carbon.identity.package.import.version.range}",
                             org.wso2.carbon.identity.oauth2.dto;
