--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
         <commons-logging.osgi.version.range>[1.2,2.0)</commons-logging.osgi.version.range>
 
-        <identity.framework.version>5.2.0</identity.framework.version>
+        <identity.framework.version>5.2.1-SNAPSHOT</identity.framework.version>
         <carbon.identity.package.import.version.range>[5.0.0, 6.0.0)</carbon.identity.package.import.version.range>
         <identity.inbound.auth.oauth.version>5.1.0</identity.inbound.auth.oauth.version>
 
