--- a/components/org.wso2.carbon.identity.application.authenticator.requestpath.oauth/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.requestpath.oauth/pom.xml
@@ -100,6 +100,7 @@
                             version="${identity.oauth.package.import.version.range}",
 
                             org.wso2.carbon.user.core.service; version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.user.core.util; version="${carbon.kernel.package.import.version.range}",
                             org.wso2.carbon.utils.multitenancy; version="${carbon.kernel.package.import.version.range}"
                         </Import-Package>
                         <Export-Package>
