--- a/pom.xml
+++ b/pom.xml
@@ -100,17 +100,17 @@
     <properties>
         <identity.outbound.auth.requestpath.oauth.version>${project.version}</identity.outbound.auth.requestpath.oauth.version>
 
-        <carbon.kernel.version>4.4.7</carbon.kernel.version>
-        <carbon.kernel.package.import.version.range>[4.4.0, 5.0.0)</carbon.kernel.package.import.version.range>
+        <carbon.kernel.version>4.5.0-m1</carbon.kernel.version>
+        <carbon.kernel.package.import.version.range>[4.5.0, 5.0.0)</carbon.kernel.package.import.version.range>
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
         <osgi.framework.imp.pkg.version.range>[1.7.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
         <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
         <commons-logging.osgi.version.range>[1.2,2.0)</commons-logging.osgi.version.range>
 
-        <identity.framework.version>5.5.0</identity.framework.version>
-        <carbon.identity.package.import.version.range>[5.0.0, 6.0.0)</carbon.identity.package.import.version.range>
-        <identity.inbound.auth.oauth.version>6.0.0</identity.inbound.auth.oauth.version>
-        <identity.oauth.package.import.version.range>[6.0.0, 7.0.0)</identity.oauth.package.import.version.range>
+        <identity.framework.version>5.13.0</identity.framework.version>
+        <carbon.identity.package.import.version.range>[5.13.0, 6.0.0)</carbon.identity.package.import.version.range>
+        <identity.inbound.auth.oauth.version>6.1.0</identity.inbound.auth.oauth.version>
+        <identity.oauth.package.import.version.range>[6.1.0, 7.0.0)</identity.oauth.package.import.version.range>
 
         <maven.scr.plugin.version>1.7.2</maven.scr.plugin.version>
         <maven.bundle.plugin.version>2.4.0</maven.bundle.plugin.version>
